[gd_scene load_steps=5 format=3 uid="uid://oveiijj866py"]

[ext_resource type="Script" path="res://Scripts/battle.gd" id="1_gfq4i"]
[ext_resource type="Texture2D" uid="uid://c5uolxmquvyy2" path="res://Images/backgrounds/ff_BG.png" id="2_coj6g"]
[ext_resource type="StyleBox" uid="uid://cqkmtt5d07sya" path="res://Styles/ComboBar.tres" id="3_2ypn0"]
[ext_resource type="StyleBox" uid="uid://dn402w70oa5dt" path="res://Styles/not_ready.tres" id="4_hd81m"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gfq4i")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -100
layout_mode = 2
offset_left = -10.0
offset_top = -10.0
offset_right = 1166.0
offset_bottom = 1154.0
texture = ExtResource("2_coj6g")
expand_mode = 1
stretch_mode = 4

[node name="ReferenceRect" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Team_2_full" type="BoxContainer" parent="ReferenceRect"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ReferenceRect/Team_2_full"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="Team_2" type="HBoxContainer" parent="ReferenceRect/Team_2_full/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ReferenceRect/Team_2_full/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Spacer" type="Label" parent="ReferenceRect/Team_2_full/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="ComboBar" type="ProgressBar" parent="ReferenceRect/Team_2_full/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/fill = ExtResource("3_2ypn0")
value = 50.0

[node name="Label" type="Label" parent="ReferenceRect/Team_2_full/VBoxContainer/HBoxContainer/ComboBar"]
layout_mode = 0
offset_left = 346.0
offset_right = 356.0
offset_bottom = 27.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Label" parent="ReferenceRect/Team_2_full/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Battle Controls" type="HBoxContainer" parent="ReferenceRect"]
layout_mode = 2

[node name="Spacer2" type="Label" parent="ReferenceRect/Battle Controls"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="ReadyButton" type="Button" parent="ReferenceRect/Battle Controls"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_styles/normal = ExtResource("4_hd81m")
text = "Not Ready"

[node name="Spacer3" type="Label" parent="ReferenceRect/Battle Controls"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="ReadyButton2" type="Button" parent="ReferenceRect/Battle Controls"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_styles/normal = ExtResource("4_hd81m")
text = "Not Ready"

[node name="Spacer" type="Label" parent="ReferenceRect/Battle Controls"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Team_1_full2" type="BoxContainer" parent="ReferenceRect"]
layout_mode = 2
size_flags_vertical = 3

[node name="Team_1_full" type="VBoxContainer" parent="ReferenceRect/Team_1_full2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ReferenceRect/Team_1_full2/Team_1_full"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Spacer" type="Label" parent="ReferenceRect/Team_1_full2/Team_1_full/HBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="ComboBar" type="ProgressBar" parent="ReferenceRect/Team_1_full2/Team_1_full/HBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/fill = ExtResource("3_2ypn0")
value = 50.0

[node name="Label" type="Label" parent="ReferenceRect/Team_1_full2/Team_1_full/HBoxContainer/ComboBar"]
layout_mode = 0
offset_left = 346.0
offset_right = 356.0
offset_bottom = 27.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer2" type="Label" parent="ReferenceRect/Team_1_full2/Team_1_full/HBoxContainer"]
custom_minimum_size = Vector2(200, 30)
layout_mode = 2

[node name="Team_1" type="HBoxContainer" parent="ReferenceRect/Team_1_full2/Team_1_full"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="ReferenceRect/Battle Controls/ReadyButton" to="." method="_on_t1_ready_button_pressed"]
[connection signal="pressed" from="ReferenceRect/Battle Controls/ReadyButton2" to="." method="_on_t2_ready_button_pressed"]
